--- a/index.html
+++ b/index.html
@@ -1,24 +1,68 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Unit Converter</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       font-family: sans-serif;
+      margin: 0;
+      padding: 1rem;
       max-width: 600px;
-      margin: auto;
-      padding: 2rem;
+      margin-left: auto;
+      margin-right: auto;
     }
-    label, input {
-      display: block;
-      margin: 0.5rem 0;
+
+    h1 {
+      font-size: 1.8rem;
+      margin-bottom: 1rem;
+      text-align: center;
     }
+
     .converter {
       margin-bottom: 2rem;
       border-bottom: 1px solid #ccc;
       padding-bottom: 1rem;
+    }
+
+    .converter h2 {
+      font-size: 1.4rem;
+      margin-top: 1rem;
+    }
+
+    label {
+      display: block;
+      margin: 1rem 0 0.5rem;
+    }
+
+    input[type="number"],
+    input[type="text"] {
+      width: 100%;
+      padding: 0.5rem;
+      font-size: 1.1rem;
+      margin-bottom: 0.5rem;
+    }
+
+    small {
+      font-size: 0.9rem;
+      color: #555;
+    }
+
+    @media (max-width: 480px) {
+      body {
+        padding: 0.75rem;
+      }
+      h1 {
+        font-size: 1.5rem;
+      }
+      .converter h2 {
+        font-size: 1.2rem;
+      }
     }
   </style>
 </head>
@@ -92,9 +136,8 @@
           const totalInches = cm / 2.54;
           const inches = Math.floor(totalInches);
           const frac = totalInches - inches;
-
           const fraction = decimalToFraction(frac, 16);
-          inInput.value = `${inches} ${fraction}`;
+          inInput.value = `${inches} ${fraction}`.trim();
         }
       } else if (from === 'in') {
         const inchString = inInput.value.trim();
@@ -107,7 +150,6 @@
     }
 
     function parseInchString(str) {
-      // Accepts "3 5/16", "5/8", "2.75"
       let total = 0;
       const parts = str.split(" ");
       for (let part of parts) {
@@ -130,7 +172,6 @@
       const numerator = Math.round(decimal * denominator);
       if (numerator === 0) return "";
       if (numerator === denominator) return "1";
-
       return `${numerator}/${denominator}`;
     }
   </script>
